<resources>
    <string name="app_name">Fête de la Science</string>

    <string name="title_event">Évenements</string>
    <string name="search_title">Rechercher</string>
    <string name="title_path">Parcours</string>

    <string name="show_on_map_btn">Voir l\'itinéraire </string>

    <string name="add_event_to_agenda_succesful">L\'événement a bien été ajouté à votre agenda</string>

    <string name="rate_btn_label">Voter</string>
    <string name="empty_paths">Aucun Parcours partagés !!! vous pouvez en créer</string>
    <string name="btn_validate_text">Valider</string>
    <string name="btn_cancel_text">Annuler</string>
    <string name="available_places_max_text">Places Max: </string>
    <string name="fill_places">Remplissage: </string>

    <string name="path_info_author_label">Auteur : </string>
    <string name="path_info_comment_label">Titre parcours : </string>


    <string name="share_path_dialog_title">Informations du parcours</string>
    <string name="share_path_dialog_author_hint">Votre nom</string>
    <string name="share_path_dialog_comment_hint">Titre du parcours</string>

    <string name="manager_identification_dialog_title">Identification Organisateur</string>
    <string name="manager_identification_dialog_identifiant_hint">Identifiant de l\'évenement</string>
    <string name="manager_update_btn_text">Mettre à jour</string>
    <string name="manager_wrong_identifiant">L\'identifiant ne correspond pas à celui de l\'évenement</string>
    <string name="manager_identifiant_edit_hint">Identifiant de l\'événement</string>
    <string name="manager_dialog_title">Identification de l\'organisateur</string>
    <string name="share_paths_dialog_title">Partage de parcours</string>
    <string name="share_event_info_dialog_title">Ajout de commentaire</string>

    <string name="share_social_dialog_title">Informations du Partage</string>
    <string name="share_social_dialog_comment_hint">Dites quelque chose</string>

    <!-- String related to menu -->
    <string name="action_settings">Paramètre</string>
    <string name="action_map">Carte</string>
    <string name="action_list">Liste</string>
    <string name="action_path">Parcours</string>
    <string name="action_manager">Organisateur</string>

    <!-- String related to Filtered queries -->

    <string-array name="query_filters">
        <item>Lieu</item>
        <item>Thème</item>
        <item>Date</item>
        <item>Mot clés</item>
    </string-array>

    <string name="label_filter">Filtrer par : </string>


    <!-- String related to Event Info -->
    <string name="label_theme">THÉMATIQUE(S) : </string>
    <string name="label_hour">HORAIRE(S) : </string>
    <string name="label_lien">LIEN : </string>
    <string name="label_description">DESCRIPTION : </string>
    <string name="label_period">PÉRIODE : </string>
    <string name="label_organisateur">ORGANISATEUR(S) : </string>
    <string name="label_places">NOMBRE DE VISITEURS : </string>
    <string name="label_placesMax">MAXIMUM DES PLACES : </string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Sign Up-->
    <string name="action_sign_up">Sign up</string>
    <string name="sign_up_error_message">Error !</string>

    <!-- Strings related to logout -->
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
