<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_edittext">

    <RelativeLayout
        android:id="@+id/share_paths_dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/share_paths_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"/>
    </RelativeLayout>

    <View android:id="@+id/h_bar"
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#000000"
        android:layout_below="@id/share_paths_dialog_title_layout"/>

    <RelativeLayout
        android:id="@+id/author_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/h_bar"
        >
        <EditText
            android:id="@+id/author_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_path_dialog_author_hint"
            android:background="@drawable/rounded_edittext"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/comment_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_edit_layout">

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_path_dialog_comment_hint"
            android:background="@drawable/rounded_edittext"/>

    </RelativeLayout>


    <View android:id="@+id/b_bar"
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#000000"
        android:layout_below="@id/comment_edit_layout"/>


    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_bar"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_validate_text"
            android:textColor="@color/cyan_blue"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_cancel_text"
            android:textColor="@color/cyan_blue"/>
    </RelativeLayout>
</RelativeLayout>